Add Encounter API tests